spacing issues

--- a/SoundsofBC/site/css/style.css
+++ b/SoundsofBC/site/css/style.css
@@ -182,8 +182,8 @@ img {
 /* Top left text */
 .head {
     position: absolute;
-    top: 15%;
-    left: 8%;
+    top: 18%;
+    left: 10%;
     transform: translate(-50%, -50%);
 
 }
